--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "less": "^2.7.2",
-    "medium-editor": "^5.23.0",
+    "lodash": "^4.17.4",
+    "marked": "^0.3.6",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
